# pioneer3dx_ROS2

./: README.md
ESP32/: p3dx_controller.code-workspace
ESP32/encoder_test/: platformio.ini
ESP32/encoder_test/src/: main.cpp
ESP32/motor_test/src/: main.cpp
ESP32/regelaar_test/src/: main.cpp
ESP32/ros_controller/: platformio.ini
ESP32/ros_controller/src/: main copy.txt  main.cpp
ESP32/rplidar_test_a/src/: main.cpp
ESP32/rplidar_test_b/src/: main.cpp
amr_bringup/: package.xml  setup.py
amr_bringup/launch/: pioneer3dx.launch.py
amr_gazebo/: package.xml  setup.py
amr_gazebo/launch/: pioneer3dx_emptyworld.launch.py  pioneer3dx_mazeworld.launch.py  pioneer3dx_warehouseworld.launch.py
amr_gazebo/models/robots/: my_robot.urdf  pioneer3dx.sdf.xacro  pioneer3dx_w_sensors.sdf.xacro  tmp.urdf
amr_gazebo/worlds/: empty.world  maze.world  warehouse.world
amr_robots_description/: package.xml  setup.cfg  setup.py
amr_robots_description/launch/: display_pioneer3dx.launch.py  gazebo.launch.py  rviz.launch.py  state_publisher.launch.py
amr_robots_description/launch/other_unsupported_launch_files/: display-pioneer-lx-devil-with-joint-state-gui.launch.py  display-with-joint-state-gui.launch.py  display-with-robotstate.launch.py  display-xacro-with-joint-state-gui.launch.py
amr_robots_description/rviz/: display_urdf.rviz
amr_robots_description/urdf/: pioneer3dx.urdf copy 2.xacro  pioneer3dx.urdf copy 3.xacro  pioneer3dx.urdf copy.xacro  pioneer3dx.urdf.xacro
amr_robots_description/urdf/sensors/: rplidar.urdf.xacro
libaria/: Makefile  Makefile.x  install.bash
libaria/ArNetworking/examples/: clientCommandLister  clientDemo  configClient  configClientToServer  configServer  configServerRobot  drawingsExample  drawingsExampleWithRobot  getVideoExample  popupExample  ptzCameraClientExample  serverDemo  simpleServerExample
libaria/examples/: demo
libaria/src/: ArCameraCollection.cpp  ArDataLogger.cpp  ArGPSConnector.cpp  ArJoyHandler_LIN.cpp  ArLog.cpp
p3dx_bringup/: package.xml  setup.cfg  setup.py
p3dx_gazebo/: package.xml  setup.cfg  setup.py
p3dx_gazebo/launch/: p3dx_emptyworld.launch.py  p3dx_mazeworld.launch.py  p3dx_warehouseworld.launch.py  pioneer3dx_emptyworld.launch.py  pioneer3dx_mazeworld.launch.py  pioneer3dx_warehouseworld.launch.py
p3dx_gazebo/models/robots/: my_robot.urdf  pioneer3dx.sdf.xacro  pioneer3dx_w_sensors.sdf.xacro  tmp.urdf
p3dx_gazebo/models/robots/NotImplemented/: pioneer-lx.sdf  pioneer3at.sdf
p3dx_gazebo/rviz/: pioneer3dx_default.rviz
p3dx_gazebo/worlds/: maze.world
p3dx_robots_description/: package.xml  setup.cfg  setup.py
p3dx_robots_description/launch/: display_p3dx.launch.py  display_pioneer3dx.launch.py  rviz.launch.py  state_publisher.launch.py
p3dx_robots_description/launch/other_unsupported_launch_files/: display-pioneer-lx-devil-with-joint-state-gui.launch.py  display-with-joint-state-gui.launch.py  display-with-robotstate.launch.py  display-xacro-with-joint-state-gui.launch.py
p3dx_robots_description/urdf/: pioneer3dx.urdf.xacro
p3dx_robots_description/urdf/common_properties/: common_properties.urdf.xacro
p3dx_robots_description/urdf/other_unsupported_robots/: pioneer-lx-devil.urdf  pioneer-lx-devil.urdf.xacro  pioneer-lx.urdf  pioneer-lx.urdf.xacro  pioneer3at.urdf  pioneer3at.urdf.xacro  pioneer3at_body.xacro  seekurjr.urdf  seekurjr.urdf.xacro
p3dx_robots_description/urdf/sensors/: rplidar.urdf.xacro
reference/: reference_design.md
ros2aria/: CMakeLists.txt  install.bash  package.xml
ros2aria/include/: ArTimeToROSTime.hpp  LaserPublisher.hpp
ros2aria/src/: LaserPublisher.cpp  Ros2Aria.cpp
ros2aria_interfaces/: CMakeLists.txt  package.xml
